<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/big_iner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_iner"
                />
            <CheckBox
                android:id="@+id/big_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_dis"
                />
            <CheckBox
                android:id="@+id/big_ontou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_ontou"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/middle_iner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_iner"
                />
            <CheckBox
                android:id="@+id/middle_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_dis"
                />
            <CheckBox
                android:id="@+id/middle_ontou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_ontou"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/small_iner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_iner"
                />
            <CheckBox
                android:id="@+id/small_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_dis"
                />
            <CheckBox
                android:id="@+id/small_ontou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_ontou"
                />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>