<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.mytouchevent.MyActivity">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/big_iner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_iner"
            />
        <CheckBox
            android:id="@+id/big_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_dis"
            />
        <CheckBox
            android:id="@+id/big_ontou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_ontou"
            />


    </LinearLayout>
    <com.example.pc.mytouchevent.BigView
        android:id="@+id/big_view"
        android:layout_below="@id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DB3838"
        >

        <ListView
            android:id="@+id/listview"
            android:layout_margin="20dp"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </ListView>

    </com.example.pc.mytouchevent.BigView>

</RelativeLayout>
